# deodat-pere.github.io

./: 404.html  CNAME  index.html  manifest.webmanifest  scraper-config.json  sw.js
.github/workflows/: deploy.yaml
assets/: index-0Db5BTh7.js  index-0fDXjpoo.js  index-0kXOOzcD.js  index-2QBEMs3E.js  index-2iXFKmj-.js  index-30RnDARR.js  index-3CQqBLbh.js  index-4B2hiQld.js  index-4VIrJ5si.js  index-4buM2Kvm.js  index-57IYacG7.js  index-5KQP7SlV.js  index-5N9lHnO_.js  index-5Z5t3USr.js  index-7k_ZRbbR.js  index-B2QS_daU.js  index-B3kw3EYG.js  index-B5zHoHDm.js  index-B6ohGvfG.js  index-B7YJt9Of.js  index-B8GNFn6Z.js  index-B9RliDD3.js  index-BBNhk4U9.js  index-BBbsI9zA.js  index-BEYi59yQ.js  index-BEittjs4.js  index-BFrNTyOv.js  index-BGsRLTUk.js  index-BIFKTt8u.js  index-BINgHQS8.js  index-BK6fNWVx.js  index-BKAeXMeZ.js  index-BKENo6aF.js  index-BLEHtgLZ.js  index-BM6tthKP.js  index-BMOwJtWd.js  index-BMXTJB64.js  index-BNEi1Rum.js  index-BOG1bH0Y.js  index-BOPTIoeo.js  (+330 more)
cine-paris/: index.html
cine-paris/assets/: index-CxOSyKJb.js
frontend/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/public/: metro-quiz.html
frontend/src/: App.tsx  NotFound.tsx  localStorage.ts  structTransform.ts  theme.ts  utils.ts
frontend/src/HomePage/: Album.tsx  (+4 more)
quiz/: metro-quiz.html
quiz/metro-quiz/: lines.geojson  stations.geojson
quiz/scripts/: fetch-metro-data.mjs
scraper/: .gitignore  Cargo.toml  config.json
scraper/src/: config.rs  error.rs  main.rs
scraper/src/scraper/: extract.rs  mod.rs  scrape_cines.rs  thread.rs
(+12 files in other folders)
