[package]
name = "scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
reqwest = { version = "0.12.8", features = [
    "json",
    "rustls-tls",
    "blocking",
], default-features = false }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

# config
clap = { version = "4.5.20", features = ["derive"] }

# logging
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-appender = "0.2.3"
